feat: :white_check_mark: add models and controllers

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URL=//127.0.0.1:27017/zuri-app
+MONGODB_URL=mongodb://127.0.0.1:27017/zuri-app
 PASSWORD_SECRET_KEY=coutinho@flavio1996
 TOKEN_SECRET_KEY=flavio@coutinho1996
